// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue Desktop Render default contents 1`] = `
<div id="app">
  <img alt="Vue.js logo" class="logo" src="@/assets/logo.png" title="Vue.js">
  <img alt="NW.js logo" class="logo" src="@/assets/nw.png" title="NW.js">
  <helloworld-stub msg="Welcome to your Vue.js Desktop App in NW.js!"></helloworld-stub>
</div>
`;

exports[`App.vue Web Render default contents 1`] = `
<div id="app">
  <img alt="Vue.js logo" class="logo" src="@/assets/logo.png" title="Vue.js">
  <!---->
  <helloworld-stub msg="Welcome to your Vue.js Web App!"></helloworld-stub>
</div>
`;
